# soc_defender

./: .env.example  .gitignore  AGENTIC_SYSTEM.md  README.md  pyproject.toml
configs/: agentic_defender.yaml  calibration.yaml  prompt_injection_regexes.yaml
defender/: __init__.py  actions.py  agent.py  budget.py  calibration.py  embeddings.py  episode_summary.py  evidence_registry.py  graph.py  graph_state.py  investigator.py  langgraph_adapter.py  llm.py  ml_calibrator.py  ml_features.py  observation.py  policy.py  prompt_context.py  prompt_guard.py  rag.py  rag_build.py  rag_context.py  rag_query.py  regex_classifier.py  report_readiness.py  responder.py  reward_policy.py  scanner.py  sql_planner.py  verifier.py
docs/: baseline_parity.md  final_steps.md  implementation_plan.md  instructions.md  ml_progress.md  opensec_train_eval_workflow.md  phase-plan.md  present_daigram.md  progress.md  prompt_injection_regex_classifier_plan.md  runpod_workflow.md
scripts/: analyze_failures.py  analyze_field_observability.py  analyze_rag_efficiency.py  build_ml_training_set.py  build_qdrant_index.py  build_rag_chunks.py  build_regex_training_set.py  eval.py  eval_ml_calibrator.py  eval_regex_classifier.py  eval_utils.py  fetch_rag_corpora.py  rag_server.py  summarize.py  train_ml_calibrator.py
tests/: test_actions_sql.py  test_agent.py  test_analyze_failures.py  test_build_ml_training_set.py  test_egar_verifier.py  test_evidence_registry.py  test_field_observability.py  test_llm_investigator.py  test_ml_calibrator.py  test_ml_features.py  test_policy.py  test_rag_build.py  (+7 more)
(+18 files in other folders)
